splash screen no quiz

--- a/site2.0/html/quiz.html
+++ b/site2.0/html/quiz.html
@@ -24,7 +24,11 @@
 <body>
 
 	<!-- colocar splash screen aq -->
-
+	<div id="splash">
+		<h4>Qual é a sua <br> <span>Pegada Ecológica?</span></h4>
+		<p>Descubra seu impacto ambiental e nos ajude a criar um mundo mais sustentável</p>
+		<button id="iniciar_quiz">Começar Questionário</button>
+	</div>
 
 	<div class="painel" id="painel">
 		<!--Barra de progresso-->
