--- a/site2.0/html/index.html
+++ b/site2.0/html/index.html
@@ -31,14 +31,14 @@
                 <p>Nossos hábitos são como <b>Pegadas</b> que deixamos na terra ao longo de nossas vidas.</p>
                 <p>Isso posto, esse projeto tem a missão de revelar sua <b>Pegada Ecológica</b>.</p>
             </div>
-            <img src="../Imagens/cherry tree-bro (2) 1.png" alt="Nature illustrations by Storyset">
+            <img src="../Imagens/landing_page/cherry tree-bro (2) 1.webp" alt="Nature illustrations by Storyset">
         </div>
     </header>
     <main>
         <section id="secao-1">
             <h2>Beleza, mas o que é uma <span>Pegada Ecológica</span>?</h2>
             <p>É a medida do seu impacto no meio ambiente. A <i><b>Pegada</b></i> que você deixa na terra.</p>
-            <img src="../Imagens/Natural Resource Depletion-amico 1.png" alt="Nature illustrations by Storyset">
+            <img src="../Imagens/landing_page/Natural Resource Depletion-amico 1.webp" alt="Nature illustrations by Storyset">
         </section>
     
         <section id="secao-2">
@@ -48,21 +48,21 @@
                     <h3>PROPÓSITO</h3>
                     <p>Participando da nossa pesquisa, você estará contribuindo para um propósito maior - um mundo mais saudável e consciente.</p>
                 </div>
-                <img src="../Imagens/International cooperation-bro 1.png" alt="People illustrations by Storyset">
+                <img src="../Imagens/landing_page/International cooperation-bro 1.webp" alt="People illustrations by Storyset">
             </section>
             <section>
                 <div>
                     <h3>FUTURO SUSTENTÁVEL</h3>
                     <p>Sua contribuição é fundamental para que possamos compreender os desafios ambientais.</p>
                 </div>
-                <img src="../Imagens/International cooperation-rafiki 1.png" alt="People illustrations by Storyset">
+                <img src="../Imagens/landing_page/International cooperation-rafiki 1.webp" alt="People illustrations by Storyset">
             </section>
             <section>
                 <div>
                     <h3>MUDANÇAS POSITIVAS</h3>
                     <p>Ao término da pesquisa será exibido um <b>relatório detalhado</b> do seu resultado. Com insights e sugestões para reduzir seu impacto ambiental. Gerando conscientização e mudanças positivas nos seus hábitos.</p>
                 </div>
-                <img src="../Imagens/Reforestation-amico 1.png" alt="Nature illustrations by Storyset">
+                <img src="../Imagens/landing_page/Reforestation-amico-1.webp" alt="Nature illustrations by Storyset">
             </section>
         </section>
     
@@ -70,13 +70,13 @@
             <h1>Vamos mudar o mundo 🔥</h1>
             <div id="opcoes">
                 <div>
-                    <img src="../Imagens/cherry tree-pana 2.png" alt="Nature illustrations by Storyset">
+                    <img src="../Imagens/landing_page/cherry tree-pana 2.webp" alt="Nature illustrations by Storyset">
                     <h3>Faça a Diferença</h3>
                     <p>Calcule sua Pegada Ecológica e Descubra seu Impacto Ambiental!</p>
                     <button id="calcule-agora"><i>CALCULE AGORA</i></button>
                 </div>
                 <div>
-                    <img src="../Imagens/cherry tree-pana (1) 1.png" alt="Nature illustrations by Storyset">
+                    <img src="../Imagens/landing_page/cherry tree-pana (1) 1.webp" alt="Nature illustrations by Storyset">
                     <h3>Visualizar Dados</h3>
                     <p>Veja a Média Geral de todos  que já fizeram a pesquisa</p>
                     <button id="ver-media"><i>VER MÉDIA</i></button>
@@ -140,7 +140,7 @@
             <a href="https://www.linkedin.com/in/greenlight-pegada-ecol%C3%B3gica-925bb2273/"><i class="bi bi-linkedin"></i></a=>
         </div>
         <a href="#"><i>Sobre nós (Em Breve)</i></a>
-        <a href="https://www.freepik.com" title="Créditos das imagens contidas nesse site"><i>Designed by Freepik</i></a>
+        <a href="https://www.freepik.com" title="Créditos das imagens contidas nesse site"><i><b>Imagens: </b>Designed by Freepik</i></a>
     </footer>
 </body>
 </html>
