--- a/site2.0/html/react_resultadoDados/src/index.html
+++ b/site2.0/html/react_resultadoDados/src/index.html
@@ -308,7 +308,8 @@ footer
   animation: bblFadInOut 1.8s infinite ease-in-out;
 }
 .loader {
-    margin-top: 15%;
+    margin-top: 40vh;
+    left: 50%;
     display: flex;
     justify-content: center;
   color: black;
