--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -11,23 +11,14 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <title>Resultado</title>
-    <link rel="icon" href="../Imagens/icons/favicon.ico">
+    <link rel="icon" href="../Imagens/icons/resultado.ico">
     <link rel="stylesheet" href="../css/resultado.css">
 
-    <!-- Importando Bootstrap -->
+    <!-- barra de carregamento (bootstrap) -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-
-    <!-- Importando presets das fontes -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-    <!-- Montserrat e Cabin-->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Roboto:wght@700&display=swap" rel="stylesheet">
-
 </head>
 <body>
     <aside>
@@ -47,9 +38,8 @@
         <p id="texto_geral"></p>    
         <p id="dica">Quer uma dica?</p>
         <button id="ir_inicio"><i class="bi bi-globe-americas"></i> Voltar ao Início</button>
-        <button id="ir_mediaGlobal"><i  style="font-size: 15px;" class="bi bi-graph-up-arrow"></i> Ver média</button>
+        <button id="ir_mediaGlobal"><i class="bi bi-graph-up-arrow"></i> Ver média</button>
     </div>
-    <!-- <script src="../seletor_tela_resultado.js"></script> -->
     <script src="../resultado.js"></script>
 </body>
 </html>
