--- a/site2.0/html/resultado.html
+++ b/site2.0/html/resultado.html
@@ -14,32 +14,32 @@
     <link rel="icon" href="../Imagens/icons/resultado.ico">
     <link rel="stylesheet" href="../css/resultado.css">
 
-    <!-- barra de carregamento (bootstrap) -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">   
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- ícones (bootstrap) -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
-    <aside>
-        <div id="caixa_titulo">
-            <p id="titulo_resultado"></p>
-        </div>
-        <div id="caixa_resultado">
-            <p id="texto_resultado">Sua pontuação foi...</p>
-            <p id="resultado"></p>
-            <div class="progress" style="height: 15px; width: 60%; left: 10%; border-radius: 20px;">
-                <div class="progress-bar" id="barra_resultado" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-            <img id="imagem_fundo"> 
-        </div>
-    </aside>
-    <div id="caixa_geral">  
-        <p id="texto_geral"></p>    
-        <p id="dica">Quer uma dica?</p>
-        <button id="ir_inicio"><i class="bi bi-globe-americas"></i> Voltar ao Início</button>
-        <button id="ir_mediaGlobal"><i class="bi bi-graph-up-arrow"></i> Ver média</button>
+    <img id="logo_inicio" src="../Imagens/icons/logo.webp" alt="GreenLight Logo">
+    <h4>Sua Pegada Ecológica é</h4>
+    <div id="caixa_titulo">
+        <h2 id="titulo_resultado"></h2>
     </div>
+    <h4><i>Pontuação</i></h4>
+    <h1 id="resultado"></h1>
+    <div id="caixa_titulo">
+        <p id="texto_geral"></p>
+    </div>
+    <p id="dica">Quer uma dica?</p>
+    <button id="ir_mediaGlobal"><i class="bi bi-graph-up-arrow"></i>Ver média</button>
+    <button id="ir_inicio"><i class="bi bi-globe-americas"></i>Voltar ao Início</button>
+    <footer>
+        <h2><i>Siga Nossas Redes ✨</i></h2>
+        <div>
+            <a href="https://www.instagram.com/greenlight.dev/"><i class="bi bi-instagram"></i></a>
+            <a href="https://github.com/XaropinhoS20/PegadaEcologica"><i class="bi bi-github"></i></a=>
+            <a href="https://www.linkedin.com/in/greenlight-pegada-ecol%C3%B3gica-925bb2273/"><i class="bi bi-linkedin"></i></a=>
+        </div>
+        <a href="#"><i>Sobre nós (Em Breve)</i></a>
+    </footer>
     <script src="../resultado.js"></script>
 </body>
 </html>
